--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -26,7 +26,7 @@ Date: 9/13/23
         <a routerLink="/home" class="nav-link">Home</a>
       </li>
       <li class="nav-item">
-        <a routerLink="#" class="nav-link">Service Repairs</a>
+        <a routerLink="/invoice-list" class="nav-link">Service Repairs</a>
       </li>
       <li class="nav-item">
         <a routerLink="/employee-directory" class="nav-link">Employees</a>
