--- a/src/app/service-repair/service-repair.component.html
+++ b/src/app/service-repair/service-repair.component.html
@@ -4,61 +4,137 @@ Date: 09-26-2023
 Description: Service Repair Component
 Source: Professor Krasso, Angular.io -->
 
-<div class="container mt-5">
-  <h1>Service Repair</h1>
-  <form [formGroup]="invoiceForm" (ngSubmit)="createInvoice()">
-    <!-- List of Fixed Rated Services with Checkboxes -->
-    <div class="form-group">
-      <h2>Fixed Rated Services:</h2>
-      <div class="form-check" *ngFor="let service of services">
-        <input class="form-check-input" type="checkbox" [id]="service.name" [(ngModel)]="service.selected"
-          name="service">
-        <label class="form-check-label" [for]="service.name">
-          {{ service.name }} ({{ service.price | currency:'USD':'symbol':'1.2-2' }})
-        </label>
+<div class="container-fluid pt-2 set-width">
+  <mat-card class="padding-left padding-right red-bg text-yellow" style="margin-top: 10%">
+    <br>
+    <form [formGroup]="invoiceForm">
+      <!-- Cust Info -->
+      <div class="row">
+        <br><br>
+        <h4 class="text-center">Customer Invoice</h4><br><br>
+        <div class="col-md-4">
+          <label>Customer Email:</label>
+          <input class="form-control  half-width" type="text" formControlName="email">
+          <label>Customer Name:</label>
+          <input class="form-control  half-width" type="text" formControlName="fullName">
+        </div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+          <label>Date:</label>
+          <input class="form-control  half-width" type="text" formControlName="orderDate" placeholder="yyyy-mm-dd"><br>
+        </div>
+        <!-- email error handling -->
+        <div class="col-md-4"
+          *ngIf="invoiceForm.controls['email'].touched && invoiceForm.controls['email'].hasError('required')"><br>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            Email is required.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+
+        <div class="col-md-4"
+          *ngIf="invoiceForm.controls['email'].touched && invoiceForm.controls['email'].hasError('email')"><br>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            Please enter a valid email address.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+        <!-- end email error handling -->
+        <!-- date error handling -->
+        <div class="col-md-4"
+          *ngIf="invoiceForm.controls['orderDate'].touched && invoiceForm.controls['orderDate'].hasError('required')">
+          <br>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            Invoice Date is required.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+        <div class="col-md-4"
+          *ngIf="invoiceForm.controls['orderDate'].touched && invoiceForm.controls['orderDate'].hasError('pattern')">
+          <br>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            Date format must be yyyy-mm-dd
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+        <!-- end date error handling -->
+        <!-- Customer Full Name error handling -->
+        <div class="col-md-4"
+          *ngIf="invoiceForm.controls['fullName'].touched && invoiceForm.controls['fullName'].hasError('required')"><br>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            Customer Full Name is required.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        </div>
+        <!-- end Customer Full Name error handling -->
+      </div>
+    </form>
+    <!-- End Cust Info -->
+    <br>
+    <!-- Fixed Services Table-->
+    <div class="row text-yellow rounded">
+      <h4 class="text-center">Fixed Cost Services:</h4>
+      <div class="col-md-12">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Service</th>
+              <th>Price</th>
+              <th>Select</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let service of services">
+              <td>{{ service.name }}</td>
+              <td>{{ service.price | currency }}</td>
+              <td>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" [(ngModel)]="service.selected"
+                    (change)="calculateTotal()">
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-
-    <!-- Checkbox for "Other Services" -->
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="otherServices" [(ngModel)]="otherServicesSelected"
-        name="otherServices">
-      <label class="form-check-label" for="otherServices">
-        Other Services
-      </label>
-    </div>
-
-    <!-- Fields for Parts and Labor (Initially Hidden) -->
-    <div id="otherServicesFields" *ngIf="otherServicesSelected" class="mt-3">
-      <div class="form-group">
-        <label for="parts">Parts (numbers only):</label>
-        <input type="number" class="form-control" id="parts" name="parts" [(ngModel)]="parts" min="0">
-      </div>
-      <div class="form-group">
-        <label for="laborHours">Labor (number of hours):</label>
-        <input type="number" class="form-control" id="laborHours" name="laborHours" [(ngModel)]="labor" min="0">
+    <!-- End Fixed Services-->
+    <br>
+    <!-- Other Services-->
+    <div class="row">
+      <div class="col-md-12">
+        <h4 class="text-center text-yellow">Other Services:</h4>
+        <h6 class="text-center text-yellow"> Enter Labor and Parts Costs for any Other Requested Services. </h6><br>
       </div>
     </div>
-
-    <!-- Email and Full Name Inputs -->
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" name="email" formControlName="email">
+    <div class="row justify-content-center">
+      <div class="col-md-4 text-center">
+        <label class="text-yellow">Labor Hours ($50/hour):</label>
+        <input class="form-control half-width text-black" type="number" id="laborCost" [(ngModel)]="labor"
+          (input)="calculateTotal()"><br>
+      </div>
+      <div class="col-md-4 text-center">
+        <label class="text-yellow">Parts Cost:</label>
+        <input class="form-control half-width text-black" type="number" id="partsCost" [(ngModel)]="parts"
+          (input)="calculateTotal()"><br>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="fullName">Full Name:</label>
-      <input type="text" class="form-control" id="fullName" name="fullName" formControlName="fullName">
+    <!-- End Other Services-->
+    <!-- Total Cost -->
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center">
+        <br>
+        <h3 class="text-yellow">Invoice Total: {{ totalCost | currency }}</h3>
+      </div>
     </div>
-
-    <!-- Total Cost Display -->
-    <div class="form-group">
-      <p>Total Cost: {{ totalCost | currency:'USD':'symbol':'1.2-2' }}</p>
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center">
+        <br>
+        <button (click)="createInvoice()" class="btn black-bg text-yellow" [disabled]="!invoiceForm.valid">Submit
+          Invoice</button><br><br>
+      </div>
     </div>
-
-    <!-- Error Message Display -->
-    <div class="alert alert-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
-
-    <!-- Submit Button -->
-    <button type="submit" class="btn btn-primary mt-3">Submit</button>
-  </form>
+    <!-- End Total Cost -->
+  </mat-card>
 </div>
